2001-06-06  Adam Fedor  <fedor@gnu.org>

	* Changes to allow an NSBox to be 'edited' and add subviews, move
	them around inside the box, etc.
	* GormPalettesManager.m (-mouseDown): Make sure the drag view is
	the proper one, not a subview of the indented item.
	* GormViewKnobs.m (GormDrawOpenKnobsForRect): New function.
	* GormWindowEditor: Add edit_view ivar to show which view accepts
	DnD, selections, etc. Changes to allow double-click to 'edit' an
	NSBox.

2001-05-09  Adam Fedor  <fedor@gnu.org>

	* GormWindowEditor.m (-_validateFrame:forViewPtr:withEvent:update:): 
	New method - validate and update view during resize.

2001-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	Applied patch by Raphael Sebbe to add support for custom objects.
	Went through the code and tried to make it conform to GNUstep
	coding standards.
	* GNUmakefile: Custom class modifications
	* Gorm.h: ditto
	* Gorm.m: ditto
	* GormClassManager.h: ditto
	* GormClassManager.m: ditto
	* GormDocument.h: ditto
	* GormDocument.m: ditto
	* GormInspectorsManager.m: ditto
	* GormObjectEditor.m: ditto
	* GormPrivate.h: ditto
	* GormWindowEditor.m: ditto

2001-04-24  Adam Fedor  <fedor@gnu.org>

	* Version: 0.0.2 snapshot
	* GNUmakefile: Add rpm package info
	* Gorm.spec.in: New file.
	* Documentation/{readme,news,install}.texi: Update
	* README, INSTALL, NEWS: Regenerate

2001-02-07  Richard Frith-Macdonald <rfm@gnu.org>

	* GormInspectorsManager.m: Resize a few buttons to fit text neatly.

2001-02-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Palettes/2Control/main.m: Added patch to tidy up and add more
	objects to the controls palette ... patch by
	Jason H Clouse <jhclouse@juno.com>
	Removed bogus code that selected a window when it was made key.

2001-01-27  Richard Frith-Macdonald <rfm@gnu.org>

	* GormPalettesManager.m: Ensure that palette manager window can never
	become key or main.  Accept first mouse events so drag start works.

2000-11-06  Adam Fedor  <fedor@gnu.org>
